Add complete SecurityConfig - full authentication and authorization system ready